# tpm_robot_ros2

./: .gitignore  LICENSE  README.md
Doc/: [Getting Start] Build and Run simulation.md  [Getting Start] Build.md  [Getting Start] Simulation.md  [Setting Start] Build and Run simulation.md
ExtraLib/RPX-L132/include/: Makefile  RPiL132.c  RPiL132.h  RPiMNet.c  RPiMNet.h  RPiRobIF.c  RPiRobIF.h  type_def.h
ExtraLib/RobC/include/: MCL_FEATURES.h  MCL_Types.h  RobC.h
MyRosRobot/: MainForm.py  MyRosRobot.py  ProcessRunner.py  myJoints.txt
RobC/include/: MCL_DEFC.h  MCL_DEF_Custom.h  MCL_Types.h  ROB_DEF.h
ar3/ar3_description/config/: ar3.rviz
ar3/ar3_description/meshes/: base_link.stl  link_3.stl  link_4.stl  link_5.stl
ar3/ar3_description/urdf/: ar3_description.urdf.xacro
ar3/ar3_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ar3/ar3_moveit_config/config/: ar3_robot.ros2_control.xacro  ar3_robot.srdf  ar3_robot.urdf.xacro  initial_positions.yaml  moveit.rviz  moveit_controllers.yaml
ar3/ar3_moveit_config/launch/: demo_full.launch.py  demo_noRviz.launch.py  demo_pureSim.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
robot_command/: CMakeLists.txt  package.xml
robot_command/include/: MyNode.h  PointsManager.h  SolutionChooser.h
robot_command/src/: MyNode.cpp  PointsManager.cpp  SolutionChooser.cpp  simple_thread.cpp
tpm_client/tpm_client_py/: package.xml  setup.cfg  setup.py
tpm_client/tpm_client_py/tpm_client_py/: libRobotOP.py  libRos.py  tpm_client.py
tpm_controller/: CMakeLists.txt  package.xml
tpm_controller/include/: FJStrategy.h
tpm_controller/include/MCLC/: CLogPrint.h  MCLC.h  MCL_Constant.h  MCL_DEFC.h  MCL_LOG_TAG.h  MCL_Types.h
tpm_controller/include/RobC/: ROB_DEF.h  RobC.h
tpm_controller/src/: FJStrategy_mclcPVT.cpp  FJStrategy_mclcPVTClient.cpp  FJStrategy_mclcSimpleMove.cpp  FJStrategy_printMsgOnly.cpp  FJStrategy_robcAxisPTP.cpp  tpm_controller.cpp
tpm_core/tpm_core_msgs/: CMakeLists.txt  package.xml
tpm_core/tpm_core_msgs/msg/: AxisStatus.msg  MotionProfile.msg  PVTPoint.msg  RobotStatus.msg
tpm_core/tpm_core_msgs/srv/: MailBox.srv  MovePTP.srv  MovePVT.srv
tpm_core/tpm_core_node/: CMakeLists.txt  package.xml
tpm_core/tpm_core_node/config/: delta_prisConfig.yaml  mnetConfig.yaml
tpm_core/tpm_core_node/include/: global_config.hpp  global_instance.hpp  hwLib.hpp
tpm_core/tpm_core_node/include/def/: def_macro.h  def_math.h  def_type.h
tpm_core/tpm_core_node/include/robot_kinematics/: robotKinematics.hpp
tpm_core/tpm_core_node/include/ros_interface/: manager_action.hpp  manager_param.hpp  manager_service.hpp  manager_topic.hpp  paramManager.hpp  serviceManager.hpp  topicManager.hpp
tpm_core/tpm_core_node/launch/: tpm_core.launch.py
tpm_core/tpm_core_node/src/: global_config.cpp  hwLib_real.cpp  hwLib_sim.cpp  myAxis.cpp  myRobot.cpp  tpm_core_node.cpp
tpm_core/tpm_core_node/src/FJStrategy/: FJStrategy_mclcPVT.cpp
tpm_core/tpm_core_node/src/robot_kinematics/: robotKinematics.cpp
tpm_core/tpm_core_node/src/ros_interface/: manager_action.cpp  manager_param.cpp  manager_service.cpp  manager_topic.cpp  paramManager.cpp  serviceManager.cpp  topicManager.cpp
tpm_core_node/: CMakeLists.txt  README.md  package.xml  tpm_core_node.md
tpm_core_node/config/: ar3.yaml  igus_delta_3dof.yaml  igus_robolink_5dof.yaml  igus_scara_4dof.yaml  mnetConfig.yaml
tpm_core_node/include/: FJStrategy.hpp  archive.hpp  global_config.hpp  hwLib.hpp  myAxis.h  myRobot.h
tpm_core_node/include/def/: def_RIDT.h
tpm_core_node/include/robot_kinematics/: robotKinematics.hpp
tpm_core_node/include/ros_interface/: manager_service.hpp
tpm_core_node/launch/: delta_pris.launch.py  demo.launch.py  demo_with_rviz.lauch.py  demo_with_rviz.launch.py  demo_without_rviz.launch.py  pure_rviz.launch.py  rviz_with_jsp.launch.py  tpm_core.launch.py
tpm_core_node/src/: global_config.cpp  global_instance.cpp  hwLib.cpp  hwLib_real.cpp  hwLib_sim.cpp  myAxis.cpp  myRobot.cpp
tpm_core_node/src/FJStrategy/: FJStrategy_mclcPVT.cpp  FJStrategy_robcAxisPTP.cpp
tpm_core_node/src/robot_kinematics/: robotKinematics.cpp
tpm_core_node/src/ros_interface/: manager_action.cpp  manager_param.cpp  manager_service.cpp  manager_topic.cpp
tpm_demo/: CMakeLists.txt  package.xml
tpm_demo/launch/: demo_basic.launch.py  pure_rviz.launch.py
tpm_description/: CMakeLists.txt  package.xml  tpm_description.md
tpm_description/launch/: demo_standAlong.launch.py  demo_tpmCore.launch.py
tpm_description/meshes/ar3/: link_1.stl  link_2.stl  link_6.stl
tpm_description/meshes/igus_delta_3dof/: 0_base.stl  1_slide1.stl  2_slide2.stl  3_slide3.stl  4_link1_l.stl  4_link1_r.stl  5_link2_l.stl  (+4 more)
tpm_description/rviz/: show_robot.rviz
tpm_description/urdf/: ar3_no_col.urdf.xacro  igus_delta_3dof.urdf.xacro  igus_robolink_5dof.urdf.xacro  igus_scara_4dof.urdf.xacro
tpm_moveit/: README.md  tpm_moveit.md
tpm_moveit/moveit_ar3/: .setup_assistant  CMakeLists.txt  package.xml
tpm_moveit/moveit_ar3/config/: ar3.srdf  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  ros2_controllers.yaml
tpm_moveit/moveit_ar3/launch/: demo.launch.py  demo_with_rviz.launch.py  demo_without_rviz.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py
tpm_moveit/moveit_ar3/sample_client/: moveit_loop.cpp  myPoints.txt
tpm_msgs/: CMakeLists.txt  package.xml  tpm_msgs.md
tpm_msgs/msg/: MotionProfile.msg  RobotStatus.msg
tpm_msgs/srv/: AxisOperation.srv  JogPose.srv  RobotMove.srv  RobotOperation.srv
tpm_sample_code/: tpm_sample_code.md
tpm_sample_code/sample_client_cpp/: CMakeLists.txt  package.xml
tpm_sample_code/sample_client_cpp/src/: move_delta_demo.cpp  move_lin.cpp  move_ptp.cpp  moveit_loop.cpp
tpm_sample_code/sample_client_py/: package.xml  setup.cfg  setup.py
tpm_sample_code/sample_ui/: MainForm.py  MainFormUI.py  MainFormUI.ui  entry.py
(+14 files in other folders)
